add blog images

--- a/content/blog/kra-tax-digital-sellers.mdx
+++ b/content/blog/kra-tax-digital-sellers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Understanding KRA Tax Requirements for Digital Sellers"
 excerpt: "A simple guide to navigating the tax landscape for online entrepreneurs in Kenya."
-image: /images/blog/blog-finance-tips.webp
+image: /images/blog/kra-tax.webp
 coverImage: "https://images.unsplash.com/photo-1542744094-24638eff58bb?auto=format&fit=crop&q=80&w800"
 author: "BudgetKE Team"
 date: "Jan 20, 2026"
