add images for shop

--- a/content/products/chamaa-manager.mdx
+++ b/content/products/chamaa-manager.mdx
@@ -30,7 +30,7 @@ technicalDetails:
   compatibility: "Windows, Mac, Android, iOS"
 videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
 rating: 4.8
-image: /images/products/chamaa-manager.webp9
+image: /images/products/chamaa-manager.webp
 reviewCount: 278
 isFeatured: true
 isBestseller: true
