--- a/content/products/expense-tracker-deluxe.mdx
+++ b/content/products/expense-tracker-deluxe.mdx
@@ -29,7 +29,7 @@ technicalDetails:
   compatibility: "Windows, Mac, Android, iOS"
 videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
 rating: 4.9
-image: /images/products/expense-tracker-deluxe.webp6
+image: /images/products/expense-tracker-deluxe.webp
 reviewCount: 203
 isFeatured: false
 isBestseller: false
